syntax = "proto3";

package rinha_2025;

import "internal/third_party/google/api/annotations.proto";

option go_package = "github.com/diogomassis/rinha-2025/internal/proto";

message PaymentRequest {
    string correlationId = 1;
    double amount = 2;
}

message PaymentResponse {
    int32 code = 1;
    string message = 2;
}

message PaymentsSummaryRequest {
    string from = 1;
    string to = 2;
}

message ProcessorSummary {
    int64 totalRequests = 1;
    double totalAmount = 2;
}

message PaymentsSummaryResponse {
    ProcessorSummary default = 1;
    ProcessorSummary fallback = 2;
}

service PaymentService {
    rpc Payments(PaymentRequest) returns (PaymentResponse) {
        option (google.api.http) = {
            post: "/payments",
            body: "*"
        };
    }
    
    rpc PaymentsSummary(PaymentsSummaryRequest) returns (PaymentsSummaryResponse) {
        option (google.api.http) = {
            get: "/payments-summary"
        };
    }
}
